--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>Mening sahifam</title>
   </head>
   <body>
-    <h1>Salom dunyo!</h1>
-    <p>Bu mening birinchi veb-sahifam.</p>
+    <h1> Salom dunyo! </h1>
+    <p> Bu mening birinchi veb-sahifam. </p>
     <img src="https://github.com/khalilovibrohimuz/Prosta/blob/main/assets/pdpVideo.png"
-         width"100"
-         height="100">
+      width="100"
+      height="100">
   </body>
 </html>
