--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1> Salom dunyo! </h1>
     <p> Bu mening birinchi veb-sahifam. </p>
-    <img src="https://github.com/khalilovibrohimuz/Prosta/blob/main/assets/pdpVideo.png"
+    <img src="https://github.com/khalilovibrohimuz/khalilovibrohimuz.github.io/blob/main/assets/pictures/pdpVideo.png"
       width="100"
       height="100">
   </body>
