--- a/index.html
+++ b/index.html
@@ -9,5 +9,19 @@
     <img src="assets/pictures/pdpVideo.png"
       width="100"
       height="100">
+    <hr>
+    Hozircha shular,
+    Tez kunda faoliyatni yo'lga qo'yaman ;)
+    
+    Ungacha esa meni ijtimoiy tarmoqlarda kuzatib borishingiz mumkin :)
+    GitHub havolasi 👉🏻 <a href="https://github.com/khalilovibrohimuz"> Khalilov Ibrohim </a> 👈🏻 Boshqa dasturlarimni shu joydan topishingiz mumkin 😉,
+        u yerda deyarli hamma kod o'zbek tilida yozilgan bo'ladi 🫡! Sahifamga kirsangiz kuzatish yozuvini ustiga bosib qo'yishni unutmang 🙏🏻 <br>
+    LinkedIn havolasi 👉🏻 <a href="https://www.linkedin.com/in/khalilovibrohimuz"> Khalilov Ibrohim </a> 👈🏻 Mening profilimga o'tib,
+        "connection" tugmasini ustiga bosib qo'ying, albatta "accept" qilaman 😉 <br>
+    YouTube kanalim  👉🏻 <a href="https://youtube.com/@uzbekcha_dasturlar"> O'zbekcha dasturlar </a> 👈🏻 Bu kanalda men sizlar uchun ko'plab ajoyib ✨ videolarni joylab boraman.
+Albatta, o'zbek tilida 🫡. Agar sizga qiziq bo'lsa, obuna bo'ling 🙏 <br>
+    Telegram kanalim 👉🏻 <a href="https://t.me/uzbekcha_dasturlar"> O'zbekcha dasturlar </a> 👈🏻 YouTube kanalimda yuklab olishga to'g'ri keladigan fayllar bor 📂.
+Siz esa ularni telegram kanalimdan topishingiz mumkin bo'ladi 😉. Agar obuna bo'lib qo'ysangiz GitHub va YouTube dan bilidirishnoma olishingizga hojat qolmaydi 🔕,
+telegramni o'zida xabardor bo'lishingiz mumkin 😉🔔
   </body>
 </html>
