Loyihaga o'zgarishlar kiritilda va dastlabki kodlar yozildi (loyiha kodlarni sinab ko'rish uchun)

--- a/index.html
+++ b/index.html
@@ -19,3 +19,19 @@
 Albatta, o'zbek tilida 🫡. Agar sizga qiziq bo'lsa, obuna bo'ling 🙏 <br>
   </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Salom dunyo!</h1>
+  <button onclick="myFunction()">Meni bos</button>
+
+  <script src="index.js"></script>
+</body>
+</html>
