Web saytni dastlabki ko'rinishga keltirib oldim

--- a/index.html
+++ b/index.html
@@ -1,37 +1,63 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mening sahifam</title>
+    <title>Ibrohim Khalilov</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1> Salom dunyo! </h1>
-    <p> Bu mening birinchi veb-sahifam. </p>
-    <hr>
-    Hozircha shular, <br>
-    Tez kunda faoliyatni yo'lga qo'yaman ;) <br>
-    <br>
-    Ungacha esa meni ijtimoiy tarmoqlarda kuzatib borishingiz mumkin :) <br>
-    GitHub havolasi 👉🏻 <a href="https://github.com/khalilovibrohimuz"> Khalilov Ibrohim </a> 👈🏻 Boshqa dasturlarimni shu joydan topishingiz mumkin 😉,
-        u yerda deyarli hamma kod o'zbek tilida yozilgan bo'ladi 🫡! Sahifamga kirsangiz kuzatish yozuvini ustiga bosib qo'yishni unutmang 🙏🏻 <br>
-    LinkedIn havolasi 👉🏻 <a href="https://www.linkedin.com/in/khalilovibrohimuz"> Khalilov Ibrohim </a> 👈🏻 Mening profilimga o'tib,
-        "connection" tugmasini ustiga bosib qo'ying, albatta "accept" qilaman 😉 <br>
-    YouTube kanalim  👉🏻 <a href="https://youtube.com/@alien_dev_uz"> Alien Developer </a> 👈🏻 Bu kanalda men sizlar uchun ko'plab ajoyib ✨ videolarni joylab boraman.
-Albatta, o'zbek tilida 🫡. Agar sizga qiziq bo'lsa, obuna bo'ling 🙏 <br>
+    <header>
+      <div class="header-left">
+        <h1>Ibrohim Khalilov</h1>
+        <p>Android dasturchi</p>
+        <p>+998 90 123 45 67</p>
+      </div>
+      <nav class="header-right">
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about-me">About me</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact-me">Contact me</a></li>
+          <li><a href="#me-on-social">Me on social</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="home">
+        <h2>Home</h2>
+        <!-- Home section content -->
+        Hammaga salom, men Androi Dasturchisiman, men ko'proq o'z ustimda ishlayman va eng ayxshi texnologiyalarni o'rganishga harakat qilaman
+      </section>
+      <section id="about-me">
+        <h2>About me</h2>
+        <!-- About me section content -->
+      </section>
+      <section id="projects">
+        <h2>Projects</h2>
+        <!-- Projects section content -->
+      </section>
+      <section id="contact-me">
+        <h2>Contact me</h2>
+        <!-- Contact me section content -->
+      </section>
+      <section id="me-on-social">
+        <h2>Me on social</h2>
+        <!-- Me on social section content -->
+      </section>
+    </main>
+    <footer>
+      <!-- Footer content -->
+    </footer>
+
+    <!-- Smooth scroll script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/16.1.3/smooth-scroll.min.js"></script>
+
+    <!-- Initialize smooth scroll script -->
+    <script type="text/javascript">
+      var scroll = new SmoothScroll('a[href*="#"]', {
+        speed: 500,
+        speedAsDuration: true
+      });
+    </script>
+
   </body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Salom dunyo!</h1>
-  <button onclick="myFunction()">Meni bos</button>
-
-  <script src="index.js"></script>
-</body>
 </html>
