Saytga biroz o'zgartirishlar kiritildi va ma'lumotlar bilan boyitildi

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="/path/to/styles/default.min.css">
+        
+        <script src="/path/to/highlight.min.js"></script>
+        <script>hljs.highlightAll();</script>
     </head>
 
     <body>
@@ -40,12 +44,40 @@
 
         <section id="about">
             <h1 class="heading">Men haqimda</h1>
-            <p>Salom, men Android dasturchiman. O'zim haqimda qisqacha ma'lumotlar...</p>
+            <p># Salom yaxshi insonlar
+
+Ushbu ombor loyihalarim bilan tanishtirish uchun yaratilgan.
+Github Pages orqali yaratgan barcha dasturlaringizni chiroyli
+usulda namoyish qila olish imkoniga ega bo'lishingiz mumkin.
+Men esa buni o'zim sinab ko'rishga qaror qildim.
+Aytgancha ushbu sayt har safar yangi loyiha yaratilganida o'zgartiriladi,
+chunki yanggi loyihaga havola qoldirish kerak bo'ladida
+
+## Havola
+
+Agar siz loyihalarim qiziq bo'lsa, quyidagi havola orqali tanishib chiqishingiz mumkin 🔗
+
+[khalilovibrohimuz.github.io](https://khalilovibrohimuz.github.io/)
+</p>
         </section>
 
         <section id="resume">
             <h1 class="heading">Rezyume</h1>
-            <p>Bu mening tajribalarim va ma'lumotlarim to'g'risida qisqacha...</p>
+            <p># Salom yaxshi insonlar
+
+Ushbu ombor loyihalarim bilan tanishtirish uchun yaratilgan.
+Github Pages orqali yaratgan barcha dasturlaringizni chiroyli
+usulda namoyish qila olish imkoniga ega bo'lishingiz mumkin.
+Men esa buni o'zim sinab ko'rishga qaror qildim.
+Aytgancha ushbu sayt har safar yangi loyiha yaratilganida o'zgartiriladi,
+chunki yanggi loyihaga havola qoldirish kerak bo'ladida
+
+## Havola
+
+Agar siz loyihalarim qiziq bo'lsa, quyidagi havola orqali tanishib chiqishingiz mumkin 🔗
+
+[khalilovibrohimuz.github.io](https://khalilovibrohimuz.github.io/)
+</p>
         </section>
 
         <section id="portfolio">
@@ -67,7 +99,66 @@
 
         <section id="interesting">
             <h1 class="heading">Qiziqarli</h1>
-            <div class="interesting-project"></div>
+            <div class="interesting-project">
+                <pre class="brush:markdown">
+## CharArt bilan hosil qilingan rasm 🖼️
+
+```
+Hello from Khalilov Ibrohim
+
+,:,,,,:;+*;***+;:::;,:,, ;*=**+:,:,*;:,,,...  +**======***+;:..............::,,;::,:::++;+#%%%%%%%%%
+:::::;;*+**:;::::::,:::::===**++;:*++:,,.  ..,**==#======*+;:..... .......,,,,;;+++::+++;;=%%%%%%%%%
+:;;;;;+*+*=****:++++:;::###=*+;::::::;:,.    **===#=====**+;:.............,:;;,,,:::,,::;;+#%%%%%%%%
+;;++**=*+*==;::::++++;:####=*::;:::::::,.....*==#==#==*:..  . .........,.,.,;,;+:*++,::;*;=+%%%%%%%%
++***=*=##*+*##;+:;**+;%%%##=***:==*+:;:. ...;*#=+ .. ...  .... ..,,,,,.,,,,.,:::***:::*=++++=%%%%%%%
+**#===+++;=#*;*=*;;;+%%%%##==+;;;*;*+;,. .        . ,. . .. . ,:.,:,.;,,.....;;+:;***;;#==++*%%%%%%%
+=#=%%%+%%%+++==*+++;%%%%#%*;++++;=*+;:,...     ..... ,,,, ., .  ,: ..+,::, .,..,,*=;;%=;+;+;#=%%%%%%
+#%%%=*=%%%%+++==*=*%%%%%%#**=*#=+;;+:.       ....,,.,,:,.,.::,;.,:..,,,,,;,,.,,,..+:#=;;;++%%==%%%%%
+===%%%=+*+*+++****%%%%%%%#%**=##+;;+,         , ..,::,,,,,,:,.,,.:,:,:,,.:,,.,:,,..;=;%%;+=#%%=%%%%%
+%%%#=%%%%#**#**+*%%%%%%%==***####+;.      ..,.. .,:::::,:::;:,,,,,,, ::,:,,,,,:;,,,..==++;;+***=%%%%
+%%==%%%*%%***%%%%%%%%%%=**#*=**+;,       ...,,,;;::;,,,,.,,,.:,,.  ..,,.,,.,,,;:,,,,::;;%+++***=#%%%
+#=%==%%%****==%%%%%%%%%#%#===**+:.    ...,,::+**==**+:.,.,...;,,.    .,..,,,,,:,...:,;;%%++*#%%%=%%%
+%%%%%==%%#=*==%%%%%%%%%%==#%%##:.... ..,,:;*=######===;,.... ::,..   . .....,....,.,;::+++++%%*%=%%%
+##=======%%%#%%%%%%%%##=##%##%=:......,:;;*##%%%%%%%###;,,.  :,, . ,:.   .  .. . ...,,:,#%%%##%%=#%%
+#%%%%%%%%%=%%%%%%%%%#=#%###%%=+:.....,:;:;#%%%%#=##+*===*.,...::, .,,.. ..        ....,,,;*=%%%#=#%%
+%%%%=###%%%%%%%%%%%%%%#####%%#;....,,,;,:#%%#%##=;;,...  ,,. .::,...,,  ,.           .,,,:%%*=====%%
+#%%%%%=##%%%%%%%%%%%%##%%####=*....,:;.;#%%%%%%%%%%##=++:::;;;;:;;......,,,   .      ...,:=***===%%%
+=##=#=###%%%%%%%%%%##%#%%%###=*,..,,;:+%%%%%%#%%%%%%##=****++*==*;:...   .           ...,;==%%*=*%%%
+%%%#####%%%%%%%%%%%%%%%%%%%#%%*:,,,;;;%%%%%%##=%#===*;;=**==####=*+;::,. ..           .,,*%%%#=*%#%%
+%%%%##%%%%%%%%%%%%%%%%%%%%%#%#=;:,;;+%%%%%%%%%#=;:,;,+:,.:=##%%%%=+++;;;;;;;;:..      ...:+*=**====#
+%######%%%%%%%%%%%%%%%%%%%%%%=%%#:;**%%%%%%%%%%%%#*****==#%%%%%%%#=+++++***+++;;:... ..,,#%=+%%%*==#
+%%####%%%%%%%%%%%%%%%%%%%%%%*=##%%#=%%%%%%%%%%%%%%%%%%%%%%%%%%%%%##*+..:.. ,:++++;;,...,:===%%%#===%
+%%%#%%%%%%%%%%%%%%%%%%%%%%%==%%%%%%=%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%#==*+;;:...  ;+++,..,;%%%=%%%====%
+##%%%%%%%%%%%%%%%%%%%%%%%%##%%%%%#%#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%##======++++;++*+ .:+%%%%#=%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%#==#%%%%%%%%%%%%%%%%%%%%%%%%%%%%######=#########====*.;%===%%========#
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%#==#%%%%%%%%%%%%%%%%%%%%%%%#*  ,=*****=#############===%#===%%=%%%%=*%%
+#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%#%%%%%%%%%%%%%%%%%%%%%%%%%*=====*++ .;*####%%######==%%=##%%=#%%%#*%%=
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%#%%%%%%%%%%%%%%%%%%%%%%%%%%%%##=**+++++*####%%#####==++==%%%%==##==%%**
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%##=*******==#########===;+=##%%%%%#==*%%==
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%#=%%##%%%%%%%%%%%%%%%%#=*##%%%==#%###=**==#######==**;;=%%%=%%%%%%%*%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%=%%%%%%%%%%%%%%%###%%%%%%%#*+;;;;**====###===**+++=%%%%%%==*%%%*%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%===%%%%%%%%%%%%%%%%%%%%%%%%##==*====##+:;+*=====***+++#%%#=#%*=*%%%%;#++
+%%%%%%%%%%%%%%%%%%%%%%%%%%%#=***##%%%%%%%%%%%%%%%#%%%%###=**++++****==**===***++**=*%%%=#=*+%%%+##%+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%****=#%%%##########%%#%%########==**************+*+*+%%%%*==#*+++++=#*+
+%%%%%%%%%%%%%%%%%%%%%%%%%%#=+****%%###############%#%%%%%%###===**********++++**%%%*+===%%##;;+*==+#
+%%%%%%%%%%%%%%%%%%%%%%%%%#==***%%%%%%#############%%%%%%#####====******++++++*%%%%****==%%%%+;#%#%#+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%==%%%%%%%%#######=#=##########=======****++;+;;+++*%%%%%%=**%%%##++##*##;
+%%%%%%%%%%%%%%%%%%%%%%%%%%%=**%%%%%%%#####======*=====***********++++;;;;;;++++%%%%%;+#%#%%++;;;:##;
+%%%%%%%%%%%%%%%%%%%%%%%%%=****+#%%%%%####==*****++++++++;;;+++;+;;;;::::;;;;#%%%;;;;;;#*%%%++;;;+##;
+%%%%%%%%%%%%%%%%%%%%%%%%%****++%%%%%%%##===**++;;;;;:::::::::::::::,:::::;%#;+#=;;;::;;;;;;;;*;:##:;
+%%%%%%%%%%%%%%%%%%%%%%%%%%*+#+*%%%%%%%###===**++;::::,,,,.,,,,,,,,,,,::::==##%;+#%%#%%;;;;;;*####+;:
+%%%%%%%%%%%%%%%%%%%%%%##%%%%%%%%%%%%%%%####====***++:,,.....,.....,,,,,:::,=##:*#%#=*;;;;;;;:##%;;::
+%%%%%%%%%%%%%%%%%%%%%##==*%%%%%%%%%%%%%%%#####=====**+;::,,,...,,...,,,**==#=#::###=;;;;%=#;=+;===#=
+%%%%%%%%%%%%%%%%%#*+;##%%%%=+=%%%%%%%%%%%%#####===***+;;::,,,,,....,,,:=*==*,,:::*=###%==#+#===#=#%#
+%%%%%%%%%%%%=;;;;;;;:..,,,,:+%%%%%%%%%%%%%######==**+;;::::,,,,,,,,:::;:,,,,,**#,:,;#==#%;::=;#=#:::
+%%%%%%%%%%*;;:::::,;,:.......,,.#%%%%%%%%%######==**++;:::::::::::::::++**,,,**===*::::,#==#,:,#::::
+%%%%%%%%%;::::,,,:,:,,,:..,...,##%%%%%%%%%%#####==***+;;;;;;:;;;;;;::,            .,,:##====,::::::,
+%%%%%%%%;;:,,.,.,,,,,..,:,. . ####%%%%%%%%######===***++;;;;;;;;;;:::,                  .,,,,,,,::,:
+%%%%%%%:::,....., ..........:#####%%%%%%%#######====***+++;;;;;;;;:::,    .                 ,,;:,,:,
+%%%%%#;,,.         .  ...,....:=################====****++++;;;;;::,,                          ,;+:+
+```
+                </pre>
+            </div>
         </section>
 
         <section id="email">
