sahifaning ko'rinishi anchagina yaxshilandi, lekin hali ishi ko'p

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
         <section id="about">
             <h1 class="heading">Men haqimda</h1>
+
+            <h3> Hali ushbu qismga ishlov berilmaganligi uchun vaqtinchalik matnlar bilan to'ldirilgan</h3> 
             <p># Salom yaxshi insonlar
 
 Ushbu ombor loyihalarim bilan tanishtirish uchun yaratilgan.
@@ -59,6 +61,8 @@ Agar siz loyihalarim qiziq bo'lsa, quyidagi havola orqali tanishib chiqishingiz 
 
         <section id="resume">
             <h1 class="heading">Rezyume</h1>
+
+            <h3> Hali ushbu qismga ishlov berilmaganligi uchun vaqtinchalik matnlar bilan to'ldirilgan</h3> 
             <p># Salom yaxshi insonlar
 
 Ushbu ombor loyihalarim bilan tanishtirish uchun yaratilgan.
@@ -111,6 +115,8 @@ Agar siz loyihalarim qiziq bo'lsa, quyidagi havola orqali tanishib chiqishingiz 
 
         <section id="interesting">
             <h1 class="heading">Qiziqarli</h1>
+            <p> Azizlar bu yerda men yaratgan eng qiziqarli dastur bor </p>
+            <br>
             <div class="interesting-project">
                 <pre class="brush:markdown">
 ## CharArt bilan hosil qilingan rasm 🖼️
@@ -170,6 +176,10 @@ Hello from Khalilov Ibrohim
 %%%%%#;,,.         .  ...,....:=################====****++++;;;;;::,,                          ,;+:+
 ```
                 </pre>
+
+                <br>
+                <h3> Dasturga havola </h3>
+                <p> Kechirasiz hali dastur githubga chiqarilmagan :(</p>
             </div>
         </section>
 
@@ -262,7 +272,6 @@ Hello from Khalilov Ibrohim
 
             <div class="credit">
                 <p>
-                    E'tiboringiz uchun rahmat!<br>
                     &copy; Khalilov Ibrohim's Portfolio 2023
                 </p>
             </div>
