--- a/index.html
+++ b/index.html
@@ -277,7 +277,18 @@ Hello from Khalilov Ibrohim
             </div>
         </section>
 
+        <svg class="cursor" width="280" height="280" viewBox="0 0 280 280">
+            <defs>
+                <filter id="filter-1" x="0%" y="0%" width="100%" height="100%" filterUnits="objectBoundingBox">
+                    <feTurbulence type="fractalNoise" baseFrequency="0.02 0.15" numOctaves="3" result="warp"></feTurbulence>
+                    <feDisplacementMap xChannelSelector="R" yChannelSelector="G" scale="0" in="SourceGraphic" in2="warp"></feDisplacementMap>
+                </filter>
+            </defs>
+            <circle class="cursor__inner" cx="64" cy="64" r="32"></circle>
+        </svg>
+
         <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+        <!-- <script src="test.js"></script> -->
         <script src="source/script.js"></script>
     </body>
 </html>
